improve colors in CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,6 +39,7 @@
 project(Yade C CXX)
 cmake_minimum_required(VERSION 2.8.11)
 
+# https://misc.flogisoft.com/bash/tip_colors_and_formatting
 # https://stackoverflow.com/questions/18968979/how-to-get-colorized-output-with-cmake , use ${Esc} for printing colors
 string(ASCII 27 Esc)
 # To have a cmake option with multiple values I used https://cmake.org/pipermail/cmake/2016-October/064342.html
@@ -151,20 +152,20 @@ ELSE (DEBUG)
 ENDIF (DEBUG)
 
 IF(BOOST_LOGGER)
-  MESSAGE(STATUS "${Esc}[36mLog filtering: enabled${Esc}[m")
+  MESSAGE(STATUS "${Esc}[36mLog filtering: enabled${Esc}[0m")
   SET(CONFIGURED_FEATS "${CONFIGURED_FEATS} BoostLog")
   ADD_DEFINITIONS("-D YADE_BOOST_LOG")
   ADD_DEFINITIONS("-D BOOST_LOG_DYN_LINK")
   IF (DEBUG)
     MESSAGE(STATUS "Enabling boost::log library and DEBUG=ON. Files will be very large with full debug info inside.")
     IF(${MAX_LOG_LEVEL} LESS 6)
-      MESSAGE(STATUS "${Esc}[33mWarning: using DEBUG=ON with MAX_LOG_LEVEL=${MAX_LOG_LEVEL} (less than 6, the maximum log level) rarely makes sense, use cmake option MAX_LOG_LEVEL=6 to fix this.${Esc}[m")
+      MESSAGE(STATUS "${Esc}[33mWarning: using DEBUG=ON with MAX_LOG_LEVEL=${MAX_LOG_LEVEL} (less than 6, the maximum log level) rarely makes sense, use cmake option MAX_LOG_LEVEL=6 to fix this.${Esc}[0m")
     ENDIF()
   ELSE (DEBUG)
     MESSAGE(STATUS "Enabling boost::log library and DEBUG=OFF. Logging will work nicely, backtraces will not have debug info, files will be small.")
   ENDIF (DEBUG)
 ELSE(BOOST_LOGGER)
-  MESSAGE(STATUS "${Esc}[36mLog filtering: disabled${Esc}[m")
+  MESSAGE(STATUS "${Esc}[36mLog filtering: disabled${Esc}[0m")
   IF (DEBUG)
     MESSAGE(STATUS "Disabling boost::log library (only rudimentary LOG_* macros will work) and DEBUG=ON. Files will be very large with full debug info inside.")
   ELSE (DEBUG)
@@ -792,9 +793,9 @@ MESSAGE(STATUS "===========================================================")
 MESSAGE(STATUS "Yade configured with following features:${CONFIGURED_FEATS}")
 MESSAGE(STATUS "Disabled features:${DISABLED_FEATS}")
 IF(BOOST_LOGGER)
-  MESSAGE(STATUS "${Esc}[36mUsing MAX_LOG_LEVEL=${MAX_LOG_LEVEL}, BOOST_LOGGER=ON${Esc}[m")
+  MESSAGE(STATUS "${Esc}[36mUsing MAX_LOG_LEVEL=${MAX_LOG_LEVEL}, BOOST_LOGGER=ON${Esc}[0m")
 ELSE(BOOST_LOGGER)
-  MESSAGE(STATUS "${Esc}[36mUsing MAX_LOG_LEVEL=${MAX_LOG_LEVEL}, BOOST_LOGGER=OFF${Esc}[m")
+  MESSAGE(STATUS "${Esc}[36mUsing MAX_LOG_LEVEL=${MAX_LOG_LEVEL}, BOOST_LOGGER=OFF${Esc}[0m")
 ENDIF(BOOST_LOGGER)
 IF (DEBUG)
   MESSAGE(STATUS "Debug build")
