rename BOOST_LOGGER → ENABLE_LOGGER

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,8 +2,8 @@
 #  CMAKE_INSTALL_PREFIX: path, where Yade will be installed (/usr/local by default)
 #  LIBRARY_OUTPUT_PATH: path to install libraries (lib by default)
 #  DEBUG: compile in debug-mode (OFF by default)
-#  BOOST_LOGGER: use boost::log library for logging (OFF by default)
-#  MAX_LOG_LEVEL: set maximum level for LOG_* macros compiled with BOOST_LOGGER. For production build use MAX_LOG_LEVEL<=4, to avoid filter integer comparison on each call to LOG_DEBUG(…), LOG_TRACE(…)
+#  ENABLE_LOGGER: use boost::log library for logging (OFF by default)
+#  MAX_LOG_LEVEL: set maximum level for LOG_* macros compiled with ENABLE_LOGGER. For production build use MAX_LOG_LEVEL<=4, to avoid filter integer comparison on each call to LOG_DEBUG(…), LOG_TRACE(…)
 #  CMAKE_VERBOSE_MAKEFILE: output additional information during compiling (OFF by default)
 #  SUFFIX: suffix, added after binary-names (version number by default)
 #  NOSUFFIX: do not add a suffix after binary-name (OFF by default)
@@ -43,7 +43,7 @@ cmake_minimum_required(VERSION 2.8.11)
 # https://stackoverflow.com/questions/18968979/how-to-get-colorized-output-with-cmake , use ${Esc} for printing colors
 string(ASCII 27 Esc)
 # To have a cmake option with multiple values I used https://cmake.org/pipermail/cmake/2016-October/064342.html
-set(MAX_LOG_LEVEL "4" CACHE STRING "set maximum level for LOG_* macros compiled with BOOST_LOGGER. For production build use MAX_LOG_LEVEL<=4, to avoid filter integer comparison on each call to LOG_DEBUG(…), LOG_TRACE(…)")
+set(MAX_LOG_LEVEL "4" CACHE STRING "set maximum level for LOG_* macros compiled with ENABLE_LOGGER. For production build use MAX_LOG_LEVEL<=4, to avoid filter integer comparison on each call to LOG_DEBUG(…), LOG_TRACE(…)")
 set_property(CACHE MAX_LOG_LEVEL PROPERTY STRINGS "0" "1" "2" "3" "4" "5" "6")  # define list of values GUI will offer for the variable
 
 
@@ -151,7 +151,7 @@ ELSE (DEBUG)
   ADD_DEFINITIONS("-DNDEBUG")
 ENDIF (DEBUG)
 
-IF(BOOST_LOGGER)
+IF(ENABLE_LOGGER)
   MESSAGE(STATUS "${Esc}[36mLog filtering: enabled${Esc}[0m")
   SET(CONFIGURED_FEATS "${CONFIGURED_FEATS} BoostLog")
   ADD_DEFINITIONS("-D YADE_BOOST_LOG")
@@ -164,14 +164,14 @@ IF(BOOST_LOGGER)
   ELSE (DEBUG)
     MESSAGE(STATUS "Enabling boost::log library and DEBUG=OFF. Logging will work nicely, backtraces will not have debug info, files will be small.")
   ENDIF (DEBUG)
-ELSE(BOOST_LOGGER)
+ELSE(ENABLE_LOGGER)
   MESSAGE(STATUS "${Esc}[36mLog filtering: disabled${Esc}[0m")
   IF (DEBUG)
     MESSAGE(STATUS "Disabling boost::log library (only rudimentary LOG_* macros will work) and DEBUG=ON. Files will be very large with full debug info inside.")
   ELSE (DEBUG)
     MESSAGE(STATUS "Disabling boost::log library (only rudimentary LOG_* macros will work, and only up to LOG_WARN) and DEBUG=OFF. Backtraces will not have debug info, files will be small.")
   ENDIF (DEBUG)
-ENDIF(BOOST_LOGGER)
+ENDIF(ENABLE_LOGGER)
 
 ADD_DEFINITIONS("-DMAX_LOG_LEVEL=${MAX_LOG_LEVEL}")
 
@@ -792,11 +792,11 @@ INSTALL(TARGETS yade DESTINATION ${YADE_LIB_PATH})
 MESSAGE(STATUS "===========================================================")
 MESSAGE(STATUS "Yade configured with following features:${CONFIGURED_FEATS}")
 MESSAGE(STATUS "Disabled features:${DISABLED_FEATS}")
-IF(BOOST_LOGGER)
-  MESSAGE(STATUS "${Esc}[36mUsing MAX_LOG_LEVEL=${MAX_LOG_LEVEL}, BOOST_LOGGER=ON${Esc}[0m")
-ELSE(BOOST_LOGGER)
-  MESSAGE(STATUS "${Esc}[36mUsing MAX_LOG_LEVEL=${MAX_LOG_LEVEL}, BOOST_LOGGER=OFF${Esc}[0m")
-ENDIF(BOOST_LOGGER)
+IF(ENABLE_LOGGER)
+  MESSAGE(STATUS "${Esc}[36mUsing MAX_LOG_LEVEL=${MAX_LOG_LEVEL}, ENABLE_LOGGER=ON${Esc}[0m")
+ELSE(ENABLE_LOGGER)
+  MESSAGE(STATUS "${Esc}[36mUsing MAX_LOG_LEVEL=${MAX_LOG_LEVEL}, ENABLE_LOGGER=OFF${Esc}[0m")
+ENDIF(ENABLE_LOGGER)
 IF (DEBUG)
   MESSAGE(STATUS "Debug build")
   SET (debugbuild " (debug build)")
