--- a/pkg/pfv/FlowEngine.hpp.in
+++ b/pkg/pfv/FlowEngine.hpp.in
@@ -70,7 +70,7 @@ class TemplateFlowEngine_@TEMPLATE_FLOW_NAME@ : public PartialEngine
 		vector<posData> positionBufferParallel;//keep the positions from a given step for multithread factorization
 		//copy positions in a buffer for faster and/or parallel access
 		virtual void setPositionsBuffer(bool current);
-		virtual void trickPermeability(Solver* flow) {};
+		virtual void trickPermeability(Solver* /*flow*/) {};
 
 	public :
 		int retriangulationLastIter;
@@ -551,7 +551,7 @@ class FlowCellInfo_@TEMPLATE_FLOW_NAME@ : public CGT::SimpleCellInfo {
 	inline int& fictious (void) {return fict;}
 	inline double& p (void) {return pression;}
 	inline double& temp (void) {return temperature;}
-	inline const double shiftedP (void) const {return pression;} //For compatibility with the periodic case
+	inline double shiftedP (void) const {return pression;} //For compatibility with the periodic case
 	inline const std::vector<double>& kNorm (void) const {return modulePermeability;}
 	inline std::vector<double>& kNorm (void) {return modulePermeability;}
 	inline std::vector< CVector >& facetSurf (void) {return facetSurfaces;}
