--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -146,7 +146,7 @@ ENDIF()
 SET(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -fPIC -O2 --param=ssp-buffer-size=4 -Wformat -Werror=format-security -Werror=all -Werror=extra -Werror=shadow=compatible-local -Werror=narrowing -Werror=return-type -Werror=uninitialized -Wno-error=maybe-uninitialized -Wno-error=comment -Wno-error=cast-function-type -std=c++14")
 
 # Target flags, which will find every possible warning
-#SET(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -fPIC -O2 --param=ssp-buffer-size=4 -Wformat -Werror=format-security -Wall -Wextra -Wpedantic -Wshadow -Wconversion -Wsign-conversion -Werror=narrowing -Werror=return-type -Werror=uninitialized -Wno-error=maybe-uninitialized -std=c++14")
+#SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC -O2 --param=ssp-buffer-size=4 -Wformat -Werror=format-security -Werror=all -Werror=extra -Werror=shadow                  -Werror=narrowing -Werror=return-type -Werror=uninitialized                                                                                 -Werror=pedantic -Werror=conversion -Werror=sign-conversion -std=c++14")
 
 # Previously used flags which produced a lot fewer warnings.
 # SET(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -fPIC -O2 --param=ssp-buffer-size=4 -Wformat -Wformat-security -Werror=format-security -Wall -Wextra -std=c++14")
