a more robust cmake when cgal or pfvflow are disabled and dependent modules are enabled (2PFV, Thermal, PotentialParticles)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -199,8 +199,8 @@ ENDIF (DEBUG)
 IF(ENABLE_LOGGER)
   MESSAGE(STATUS "${Esc}[36mLog filtering: enabled${Esc}[0m")
   SET(CONFIGURED_FEATS "${CONFIGURED_FEATS} BoostLog")
-  ADD_DEFINITIONS("-D YADE_BOOST_LOG")
-  ADD_DEFINITIONS("-D BOOST_LOG_DYN_LINK")
+  ADD_DEFINITIONS("-DYADE_BOOST_LOG")
+  ADD_DEFINITIONS("-DBOOST_LOG_DYN_LINK")
   IF (DEBUG)
     MESSAGE(STATUS "Enabling boost::log library and DEBUG=ON. Files will be very large with full debug info inside.")
     IF(${MAX_LOG_LEVEL} LESS 6)
@@ -415,9 +415,9 @@ ELSE(ENABLE_GUI)
 ENDIF(ENABLE_GUI)
 #===========================================================
 # This one will cry on attempts to build CGAL-based packages without cgal
-IF(NOT ENABLE_CGAL AND (ENABLE_PFVFLOW OR ENABLE_TWOPHASEFLOW))
-  MESSAGE(STATUS "PFVFLOW and TWOPHASEFLOW depends on CGAL, and ENABLE_CGAL is disabled (not found or turned OFF)")
-ENDIF(NOT ENABLE_CGAL AND (ENABLE_PFVFLOW OR ENABLE_TWOPHASEFLOW))
+IF(NOT ENABLE_CGAL AND (ENABLE_PFVFLOW OR ENABLE_TWOPHASEFLOW OR ENABLE_THERMAL OR ENABLE_POTENTIAL_PARTICLES))
+  MESSAGE(STATUS "PFVFLOW, TWOPHASEFLOW, THERMAL, and POTENTIAL_PARTICLES depends on CGAL, but CGAL is disabled (not found or turned OFF)")
+ENDIF(NOT ENABLE_CGAL AND (ENABLE_PFVFLOW OR ENABLE_TWOPHASEFLOW OR ENABLE_THERMAL OR ENABLE_POTENTIAL_PARTICLES))
 #===========================================================
 IF(ENABLE_CGAL)
   INCLUDE(FindGMP)
@@ -453,8 +453,22 @@ IF(ENABLE_CGAL)
 ELSE(ENABLE_CGAL)
   SET(DISABLED_FEATS "${DISABLED_FEATS} CGAL")
 ENDIF(ENABLE_CGAL)
+
 #===========================================================
-IF(ENABLE_LINSOLV)
+IF(ENABLE_PFVFLOW)
+	IF(ENABLE_CGAL)
+		SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DFLOW_ENGINE")
+		SET(CONFIGURED_FEATS "${CONFIGURED_FEATS} PFVFLOW")
+	ELSE(ENABLE_CGAL)
+		SET(DISABLED_FEATS "${DISABLED_FEATS} PFVFLOW")
+		SET(ENABLE_PFVFLOW OFF)
+	ENDIF(ENABLE_CGAL)
+ELSE(ENABLE_PFVFLOW)
+	SET(DISABLED_FEATS "${DISABLED_FEATS} PFVFLOW")
+ENDIF(ENABLE_PFVFLOW)
+
+#===========================================================
+IF(ENABLE_PFVFLOW AND ENABLE_LINSOLV)
   FIND_PACKAGE(Cholmod)
   FIND_PACKAGE(OpenBlas)
   FIND_PACKAGE(Metis)
@@ -492,13 +506,13 @@ IF(ENABLE_LINSOLV)
     SET(DISABLED_FEATS "${DISABLED_FEATS} LINSOLV")
     SET(ENABLE_LINSOLV OFF)
   ENDIF(CHOLMOD_FOUND AND OPENBLAS_FOUND AND METIS_FOUND AND CGAL_FOUND)
-ELSE(ENABLE_LINSOLV)
+ELSE(ENABLE_PFVFLOW AND ENABLE_LINSOLV)
   SET(DISABLED_FEATS "${DISABLED_FEATS} LINSOLV")
       IF(ENABLE_TWOPHASEFLOW)
          MESSAGE(STATUS "TWOPHASEFLOW was disabled automatically because LINSOLV is disabled")
          SET(ENABLE_TWOPHASEFLOW OFF)
       ENDIF(ENABLE_TWOPHASEFLOW)
-ENDIF(ENABLE_LINSOLV)
+ENDIF(ENABLE_PFVFLOW AND ENABLE_LINSOLV)
 #===============================================
 IF(ENABLE_MPI)
   FIND_PACKAGE(MPI)
@@ -614,12 +628,12 @@ ENDIF(ENABLE_MASK_ARBITRARY)
 
 #===========================================================
 
-IF(ENABLE_THERMAL)
+IF(ENABLE_THERMAL AND ENABLE_PFVFLOW)
   SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DTHERMAL")
   SET(CONFIGURED_FEATS "${CONFIGURED_FEATS} THERMAL")
-ELSE(ENABLE_THERMAL)
+ELSE(ENABLE_THERMAL AND ENABLE_PFVFLOW)
   SET(DISABLED_FEATS "${DISABLED_FEATS} THERMAL")
-ENDIF(ENABLE_THERMAL)
+ENDIF(ENABLE_THERMAL AND ENABLE_PFVFLOW)
 
 IF(ENABLE_PROFILING)
   SET(CONFIGURED_FEATS "${CONFIGURED_FEATS} PROFILING")
@@ -629,7 +643,7 @@ ELSE(ENABLE_PROFILING)
 ENDIF(ENABLE_PROFILING)
 
 #===========================================================
-IF(ENABLE_POTENTIAL_PARTICLES)
+IF(ENABLE_POTENTIAL_PARTICLES AND ENABLE_CGAL)
   FIND_PACKAGE(OpenBlas REQUIRED)
   FIND_PACKAGE(LAPACK REQUIRED)
   IF(OPENBLAS_FOUND AND LAPACK_FOUND)
@@ -644,14 +658,14 @@ IF(ENABLE_POTENTIAL_PARTICLES)
     SET(DISABLED_FEATS "${DISABLED_FEATS} PotentialParticles")
     SET(ENABLE_POTENTIAL_PARTICLES OFF)
   ENDIF(OPENBLAS_FOUND AND LAPACK_FOUND)
-ELSE(ENABLE_POTENTIAL_PARTICLES)
+ELSE(ENABLE_POTENTIAL_PARTICLES AND ENABLE_CGAL)
   SET(DISABLED_FEATS "${DISABLED_FEATS} PotentialParticles")
-ENDIF(ENABLE_POTENTIAL_PARTICLES)
+ENDIF(ENABLE_POTENTIAL_PARTICLES AND ENABLE_CGAL)
 #===========================================================
 
 
 #===========================================================
-IF(ENABLE_POTENTIAL_BLOCKS)
+IF(ENABLE_POTENTIAL_BLOCKS AND ENABLE_CGAL)
   INCLUDE(FindCLP)
   FIND_PACKAGE(OpenBlas REQUIRED)
   FIND_PACKAGE(LAPACK REQUIRED)
@@ -667,9 +681,9 @@ IF(ENABLE_POTENTIAL_BLOCKS)
     SET(DISABLED_FEATS "${DISABLED_FEATS} PotentialBlocks")
     SET(ENABLE_POTENTIAL_BLOCKS OFF)
   ENDIF(CLP_FOUND AND OPENBLAS_FOUND AND LAPACK_FOUND)
-ELSE(ENABLE_POTENTIAL_BLOCKS)
+ELSE(ENABLE_POTENTIAL_BLOCKS AND ENABLE_CGAL)
   SET(DISABLED_FEATS "${DISABLED_FEATS} PotentialBlocks")
-ENDIF(ENABLE_POTENTIAL_BLOCKS)
+ENDIF(ENABLE_POTENTIAL_BLOCKS AND ENABLE_CGAL)
 #===========================================================
 
 
