proper detection of mpi4py by cmake (fix failed #include mpi4py.h on cluster)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -515,9 +515,10 @@ ELSE(ENABLE_PFVFLOW AND ENABLE_LINSOLV)
 ENDIF(ENABLE_PFVFLOW AND ENABLE_LINSOLV)
 #===============================================
 IF(ENABLE_MPI)
-  FIND_PACKAGE(MPI)
-  IF (MPI_FOUND)
-    INCLUDE_DIRECTORIES(${MPI_CXX_INCLUDE_PATH})
+  FIND_PACKAGE(MPI REQUIRED)
+  FIND_PACKAGE(MPI4PY REQUIRED)
+  IF (MPI_FOUND AND MPI4PY_FOUND)
+    INCLUDE_DIRECTORIES(${MPI_CXX_INCLUDE_PATH} ${MPI4PY_INCLUDE_DIR})
     SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${MPI_CXX_COMPILE_FLAGS} -DYADE_MPI")
     string (STRIP "${MPI_CXX_LIBRARIES}" MPI_LIBRARIES)
     string (STRIP "${MPI_CXX_LINK_FLAGS}" MPI_LINK_FLAGS)
