--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -51,7 +51,7 @@ stages:
     - mkdir build && cd build
     - export CC="ccache gcc"
     - export CXX="ccache g++"
-    - cmake -DSUFFIX=-ci -DCMAKE_VERBOSE_MAKEFILE=ON -DCMAKE_INSTALL_PREFIX=../install -DPYTHON_VERSION=3 -DDISABLE_SAVE_TEMPS=1 ..
+    - cmake -DSUFFIX=-ci -DCMAKE_VERBOSE_MAKEFILE=ON -DCMAKE_INSTALL_PREFIX=../install $EXTRA_CMAKE_ARGS -DPYTHON_VERSION=3 -DDISABLE_SAVE_TEMPS=1 ..
     - ccache -s
     - export LINK_GOLD=$(case    $CI_PIPELINE_SOURCE in "merge_request_event") echo "20" ;; *) echo "10";; esac)
     - export LINK_REGULAR=$(case $CI_PIPELINE_SOURCE in "merge_request_event") echo "10" ;; *) echo "20";; esac)
@@ -123,6 +123,14 @@ make_suse15:
     - echo $CXXFLAGS
   image: registry.gitlab.com/yade-dev/docker-yade:suse15
 
+make_18_04_nogui:
+  <<: *make_definition
+  <<: *artifacts_definition
+  before_script:
+    - export EXTRA_CMAKE_ARGS="-DENABLE_GUI=OFF $EXTRA_CMAKE_ARGS"
+    - echo $EXTRA_CMAKE_ARGS
+  image: registry.gitlab.com/yade-dev/docker-yade:ubuntu18.04
+
 
 # 3.1. test stage
 .test_template: &test_definition
@@ -181,6 +189,12 @@ test_18_foam:
     - cat /etc/os-release
     - export OMPI_MCA_btl_vader_single_copy_mechanism=none
     - /builds/yade-dev/trunk/scripts/checks-and-tests/testOpenFoam.sh
+
+test_18_04_nogui:
+  <<: *test_definition
+  image: registry.gitlab.com/yade-dev/docker-yade:ubuntu18.04
+  dependencies:
+    - make_18_04_nogui
 
 
 # 3.2. check stage
