--- a/core/main/main.py.in
+++ b/core/main/main.py.in
@@ -196,6 +196,7 @@ if opts.performance:
 def checkVersions():
 	# put here all yade compatibility tests with other libraries
 	import yade.libVersions
+	# Remember that libVersions always can return None, when library does not exist. Make sure this will not lead to a crash.
 	glutVer = yade.libVersions.getVersion('freeglut')
 	if((glutVer != None) and (glutVer > (2,8,1) or glutVer == (-1,-1,-1))):
 		print("\033[93mWarning: freeglut versions higher than 2.8.1 are known to crash\033[0m, see https://gitlab.com/yade-dev/trunk/merge_requests/160")
