fix cmake warning

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -539,10 +539,10 @@ IF(ENABLE_MPI)
 #     /usr/lib/x86_64-kfreebsd-gnu /usr/lib/x86_64-linux-gnux32
 #     )
 #     INCLUDE_DIRECTORIES(${MPI_H_INCLUDE_DIR})
-  ELSE(MPI_FOUND)
+  ELSE(MPI_FOUND  AND MPI4PY_FOUND)
     MESSAGE(STATUS "MPI NOT FOUND, YADE-OpenFOAM coupling disabled")
     SET (DISABLED_FEATS "${DISABLED_FEATS} MPI")
-  ENDIF(MPI_FOUND)
+  ENDIF(MPI_FOUND  AND MPI4PY_FOUND)
 ELSE(ENABLE_MPI)
     SET (DISABLED_FEATS "${DISABLED_FEATS} MPI")
 ENDIF(ENABLE_MPI)
