--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -51,10 +51,9 @@ stages:
     - export CXXFLAGS="-fdiagnostics-color=always $CXXFLAGS"
     - echo $CXXFLAGS
     - mkdir build && cd build
-    - export CC="ccache gcc"
-    - export CXX="ccache g++"
-    - echo $EXTRA_CMAKE_ARGS
-    - cmake -DSUFFIX=-ci -DCMAKE_VERBOSE_MAKEFILE=ON -DCMAKE_INSTALL_PREFIX=../install $EXTRA_CMAKE_ARGS -DPYTHON_VERSION=3 -DDISABLE_SAVE_TEMPS=1 ..
+    - export CC="${CC:-ccache gcc}"   # set only if CC empty
+    - export CXX="${CXX:-ccache g++}" # set only if CXX empty
+    - cmake -DSUFFIX=-ci -DCMAKE_VERBOSE_MAKEFILE=ON -DCMAKE_INSTALL_PREFIX=../install -DPYTHON_VERSION=3 -DDISABLE_SAVE_TEMPS=1 $ADDITIONAL_COMPILE_FLAGS ..
     - ccache -s
     - export LINK_GOLD=$(case    $CI_PIPELINE_SOURCE in "merge_request_event") echo "20" ;; *) echo "10";; esac)
     - export LINK_REGULAR=$(case $CI_PIPELINE_SOURCE in "merge_request_event") echo "10" ;; *) echo "20";; esac)
@@ -134,6 +133,14 @@ make_18_04_nogui:
     - echo $EXTRA_CMAKE_ARGS
   image: registry.gitlab.com/yade-dev/docker-yade:ubuntu18.04_nogui
 
+make_clang:
+  <<: *make_definition
+  <<: *artifacts_definition
+  before_script:
+    - export CC="/usr/bin/clang-9"
+    - export CXX="/usr/bin/clang++-9"
+    - export ADDITIONAL_COMPILE_FLAGS="-DENABLE_THERMAL=0 -DENABLE_TWOPHASEFLOW=0 -DENABLE_POTENTIAL_BLOCKS=0"
+  image: registry.gitlab.com/yade-dev/docker-yade:debian-bullseye
 
 # 3.1. test stage
 .test_template: &test_definition
