--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -103,7 +103,7 @@ INCLUDE_DIRECTORIES (${CMAKE_SOURCE_DIR})
 #EXECUTE_PROCESS(COMMAND ${CMAKE_C_COMPILER} -dumpversion OUTPUT_VARIABLE GCC_VERSION)
 
 IF ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")  # Check whether we compile with GCC
-  IF (CMAKE_CXX_COMPILER_VERSION VERSION_GREATER 4.8 OR CMAKE_CXX_COMPILER_VERSION VERSION_EQUAL 4.8 and "${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
+  IF (CMAKE_CXX_COMPILER_VERSION VERSION_GREATER 4.8 OR CMAKE_CXX_COMPILER_VERSION VERSION_EQUAL 4.8)
     MESSAGE(STATUS "GCC Version >= 4.8. Adding -ftrack-macro-expansion=0")
     ADD_DEFINITIONS("-ftrack-macro-expansion=0")
   ELSE()
