ENABLE_MPI=0 until we find out how to use MPI in clang.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -138,7 +138,7 @@ make_clang:
   before_script:
     - export CC="/usr/bin/clang-9"
     - export CXX="/usr/bin/clang++-9"
-    - export ADDITIONAL_COMPILE_FLAGS="-DENABLE_THERMAL=0 -DENABLE_TWOPHASEFLOW=0 -DENABLE_POTENTIAL_BLOCKS=0"
+    - export EXTRA_CMAKE_ARGS="-DENABLE_THERMAL=0 -DENABLE_TWOPHASEFLOW=0 -DENABLE_POTENTIAL_BLOCKS=0 -DENABLE_MPI=0 $EXTRA_CMAKE_ARGS"
   image: registry.gitlab.com/yade-dev/docker-yade:debian-bullseye
 
 # 3.1. test stage
