--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -189,6 +189,10 @@ INCLUDE(YadePythonHelpers)
 
 SET(PY3_VERSIONS 3.8 3.7 3.6 3.5 3.4 3.3 3.2 3.1 3.0) #append newer python versions at the beginning here.
 SET(PY2_VERSIONS 2.7 2.6)
+
+IF (DEFINED PYTHON_EXECUTABLE)
+	SET(USER_DEFINED_PYTHON_EX ${PYTHON_EXECUTABLE})
+ENDIF()
 IF(${PYTHON_VERSION} EQUAL -1)
 	SET(PY_VERSIONS_CHECK "${PY3_VERSIONS};${PY2_VERSIONS}")
 ELSEIF(${PYTHON_VERSION} EQUAL 2)
@@ -228,6 +232,10 @@ FOREACH(py_version ${PY_VERSIONS_CHECK})
 	ENDIF()
 ENDFOREACH()
 
+IF (DEFINED USER_DEFINED_PYTHON_EX)
+	MESSAGE("Using user defined PYTHON_EXECUTABLE: $USER_DEFINED_PYTHON_EX")
+	SET(PYTHON_EXECUTABLE $USER_DEFINED_PYTHON_EX)
+ENDIF()
 #After the loop on all python versions, having ALL_PYTHON_DEPENDENCIES_FOUND==FALSE must trigger an error:
 IF(NOT ALL_PYTHON_DEPENDENCIES_FOUND)
 	MESSAGE(FATAL_ERROR "No python version with all dependencies was found.")
